# dbportal

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.ca1027e  Makefile.am  README.md  configure.ac
cmake/: dbportal.cmake
code/: build.py  cleanup.cpp  dumpmain.cpp  genarchive.cpp  gencommn.cpp  gencsadonet.cpp  gencsidl2.cpp  gencsnet7.cpp  gencsrw.cpp  gendap.cpp  genidl.cpp  genoci.cpp  genparm.cpp  genproc.cpp  genproc.h  genpython.cpp  genvbcode3.cpp  genvbforador.cpp  genvbforidl.cpp  genvbnet7.cpp  global.h  lex.cpp  linkmain.cpp  loadso.cpp  loadso.h  machine.h  oddsql.atg  pocimain.cpp  pocimain_sw.cpp  slink.cpp  slink.h  sqlbin.cpp  sqlbin.h  sqldef.y  sqltok.cpp  sqltok.h  switches2.h
code/oci11/: dbportal.h  sqlapi.cpp
examples/: CMakeLists.txt
examples/large/: CMakeLists.txt
examples/large/si/: message.si
examples/pocitest/: CMakeLists.txt  i3_nednotes.cs  nednotes.si
genproc/: CMakeLists.txt
installs/: CMakeLists.txt
pcexamples/: CMakeLists.txt
pcexamples/si/: rewards.si
pocidump/: CMakeLists.txt
pocilib/: CMakeLists.txt
pocilink/: CMakeLists.txt
pocioci/: CMakeLists.txt
tools/instantclient_11_1/: PRECOMP_README
tools/instantclient_11_1/sdk/: pcscfg.cfg
tools/instantclient_11_1/sdk/demo/: demo_proc.mk  pcscfg.cfg  procdemo.pc
